chore(sticky-scroller): adds possible working version of flicker fix

--- a/assets/scss/components/_sticky-scroller.scss
+++ b/assets/scss/components/_sticky-scroller.scss
@@ -27,8 +27,8 @@
 .sticky-scroller__spacer {
   pointer-events: none;
   position: relative;
-  opacity: 0;
-  overflow: hidden;
+  // opacity: 0;
+  // overflow: hidden;
 
   &::after {
     content: '';
@@ -40,4 +40,30 @@
     bottom: 0;
     left: 0;
   }
+
+  &::before {
+    position: absolute;
+    display: block;
+    content: '';
+    width: 100%;
+    height: 100px;
+    background-color: var(--color-sticky-scroller);
+    // background-color: red;
+    bottom: -20px;
+    z-index: -1;
+    // z-index: 2;
+  }
+
+  // + * {
+  //   &::before {
+  //     position: absolute;
+  //     display: block;
+  //     content: '';
+  //     width: 100%;
+  //     height: 40px;
+  //     background-color: var(--color-sticky-scroller);
+  //     top: -40px;
+  //     z-index: -1;
+  //   }
+  // }
 }
